# liegroupMath

./: CMakeLists.txt  README.md
include/: commonmath.hpp  commontools.hpp
include/r3/: operations.hpp
include/se3/: operations.hpp
include/so3/: rotations.hpp
source/include/: liegroupmath.hpp
source/include/r3/: types.hpp
source/include/se3/: transformations.hpp  transformationswithcovariance.hpp  types.hpp
source/include/so3/: operations.hpp  types.hpp
source/src/: commonmath.cpp
source/src/r3/: operations.cpp
source/src/se3/: operations.cpp
source/src/so3/: operations.cpp
source/test/: rotationtest.cpp  so3test.cpp  transformwithcovariancetests.cpp
src/r3/: operations.cpp
src/se3/: operations.cpp  transformations.cpp  transformationswithcovariance.cpp
src/so3/: operations.cpp  rotations.cpp
test/: covariancetest.cpp  rotationtest.cpp  se3test.cpp  so3test.cpp  transformtest.cpp
